--- a/Reso/Reso/Login.storyboard
+++ b/Reso/Reso/Login.storyboard
@@ -93,8 +93,11 @@
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="ON5-0X-0ba" secondAttribute="height" multiplier="1:1" id="roY-TZ-mpx"/>
                                                 </constraints>
+                                                <state key="normal">
+                                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                </state>
                                                 <connections>
-                                                    <action selector="selectImageTapped:" destination="Qly-fy-qFA" eventType="touchUpInside" id="QvB-7c-JRc"/>
+                                                    <action selector="selectImageTapped" destination="Qly-fy-qFA" eventType="touchUpInside" id="xWt-nR-xYa"/>
                                                 </connections>
                                             </button>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="qCH-Wj-vy4">
@@ -177,6 +180,7 @@
                         <outlet property="lastNameTextField" destination="dQp-Lu-o8z" id="EPk-MF-SeO"/>
                         <outlet property="loginButtonOutlet" destination="Dcn-Zf-NDK" id="Av1-WD-olO"/>
                         <outlet property="passwordTextField" destination="vBp-r3-jQh" id="c1C-Sj-V90"/>
+                        <outlet property="selectImageButtonOutlet" destination="ON5-0X-0ba" id="3OT-RZ-MGb"/>
                         <outlet property="stackViewTopConstraint" destination="8SG-sJ-kTZ" id="UlW-Un-Qtq"/>
                     </connections>
                 </viewController>
