--- a/Reso/Reso/Detail.storyboard
+++ b/Reso/Reso/Detail.storyboard
@@ -84,7 +84,7 @@
                                                             </mask>
                                                         </variation>
                                                     </view>
-                                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1c2-f3-oE9" userLabel="Comments Table View">
+                                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1c2-f3-oE9" userLabel="Comments Table View">
                                                         <rect key="frame" x="0.0" y="300" width="600" height="254"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                         <constraints>
@@ -99,42 +99,42 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <subviews>
-                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iXw-9L-wyS" userLabel="userPhotoImageView">
-                                                                            <rect key="frame" x="8" y="10" width="40" height="40"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="height" constant="40" id="Cqm-sC-62I"/>
-                                                                                <constraint firstAttribute="width" constant="40" id="uPX-0z-sVF"/>
-                                                                            </constraints>
-                                                                        </imageView>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDU-bv-eH1" userLabel="userNameLabel">
-                                                                            <rect key="frame" x="58" y="5" width="250" height="20"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" constant="250" id="aUF-yY-uok"/>
-                                                                                <constraint firstAttribute="height" constant="20" id="lhK-hl-5EQ"/>
-                                                                            </constraints>
-                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
-                                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oek-Mb-NHY" userLabel="userCommentLabel">
-                                                                            <rect key="frame" x="63" y="25" width="250" height="20"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="height" constant="20" id="6u2-gb-elF"/>
-                                                                                <constraint firstAttribute="width" constant="250" id="nyA-PM-wNC"/>
-                                                                            </constraints>
-                                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="13"/>
-                                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
+                                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0ej-34-eey">
+                                                                            <rect key="frame" x="8" y="8" width="584" height="44"/>
+                                                                            <subviews>
+                                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iXw-9L-wyS" userLabel="userPhotoImageView">
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                                                                    <constraints>
+                                                                                        <constraint firstAttribute="height" constant="44" id="dsc-c8-rfj"/>
+                                                                                        <constraint firstAttribute="width" constant="44" id="ejf-ku-gDf"/>
+                                                                                    </constraints>
+                                                                                </imageView>
+                                                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="DGS-N4-sHF">
+                                                                                    <rect key="frame" x="52" y="0.0" width="532" height="44"/>
+                                                                                    <subviews>
+                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MDU-bv-eH1" userLabel="userNameLabel">
+                                                                                            <rect key="frame" x="0.0" y="0.0" width="532" height="22"/>
+                                                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                                            <nil key="highlightedColor"/>
+                                                                                        </label>
+                                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oek-Mb-NHY" userLabel="userCommentLabel">
+                                                                                            <rect key="frame" x="0.0" y="22" width="532" height="22"/>
+                                                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                                            <nil key="highlightedColor"/>
+                                                                                        </label>
+                                                                                    </subviews>
+                                                                                </stackView>
+                                                                            </subviews>
+                                                                        </stackView>
                                                                     </subviews>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                     <constraints>
-                                                                        <constraint firstItem="iXw-9L-wyS" firstAttribute="leading" secondItem="Sg1-Gy-Hx0" secondAttribute="leading" constant="8" id="0YM-0i-Hud"/>
-                                                                        <constraint firstItem="Oek-Mb-NHY" firstAttribute="leading" secondItem="iXw-9L-wyS" secondAttribute="trailing" constant="15" id="VUB-Iq-SY8"/>
-                                                                        <constraint firstItem="MDU-bv-eH1" firstAttribute="leading" secondItem="iXw-9L-wyS" secondAttribute="trailing" constant="10" id="b6h-r8-2TC"/>
-                                                                        <constraint firstItem="iXw-9L-wyS" firstAttribute="centerY" secondItem="Sg1-Gy-Hx0" secondAttribute="centerY" id="bOA-02-0br"/>
-                                                                        <constraint firstItem="Oek-Mb-NHY" firstAttribute="top" secondItem="MDU-bv-eH1" secondAttribute="bottom" id="ciW-UO-Llg"/>
-                                                                        <constraint firstItem="MDU-bv-eH1" firstAttribute="top" secondItem="Sg1-Gy-Hx0" secondAttribute="top" constant="5" id="tTQ-ai-idl"/>
+                                                                        <constraint firstItem="0ej-34-eey" firstAttribute="top" secondItem="Sg1-Gy-Hx0" secondAttribute="topMargin" id="bnV-m3-IxX"/>
+                                                                        <constraint firstAttribute="bottomMargin" secondItem="0ej-34-eey" secondAttribute="bottom" id="lCR-aq-7X8"/>
+                                                                        <constraint firstAttribute="trailingMargin" secondItem="0ej-34-eey" secondAttribute="trailing" id="rUr-2t-a4D"/>
+                                                                        <constraint firstItem="0ej-34-eey" firstAttribute="leading" secondItem="Sg1-Gy-Hx0" secondAttribute="leadingMargin" id="xtO-bR-nMK"/>
                                                                     </constraints>
                                                                 </tableViewCellContentView>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -333,8 +333,8 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Vjy-iS-RRb" userLabel="Question One Stack View">
                                         <rect key="frame" x="0.0" y="120" width="560" height="56"/>
                                         <subviews>
-                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQR-jc-gAO" userLabel="questionOneButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="53" height="54"/>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQR-jc-gAO" userLabel="questionOneButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                                 <color key="backgroundColor" red="0.98039215686274506" green="0.88235294117647056" blue="0.25098039215686274" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="hQR-jc-gAO" secondAttribute="height" multiplier="1:1" id="gMc-gA-bn6"/>
@@ -355,10 +355,10 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ni9-7g-afm" userLabel="Question One Stack View">
-                                        <rect key="frame" x="0.0" y="180" width="560" height="55"/>
+                                        <rect key="frame" x="0.0" y="180" width="560" height="56"/>
                                         <subviews>
-                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JN7-3v-Dzf" userLabel="questionOneButton">
-                                                <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JN7-3v-Dzf" userLabel="questionOneButton">
+                                                <rect key="frame" x="0.0" y="0.0" width="56" height="56"/>
                                                 <color key="backgroundColor" red="0.24313725490196078" green="0.8666666666666667" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="JN7-3v-Dzf" secondAttribute="height" multiplier="1:1" id="ZUX-3e-jBN"/>
